# ai-hackathon-smit

./: README.md
campus-ai-backend/: main.py  package-lock.json  pyproject.toml
campus-ai-backend/agent/: langgrah_campus_analytics.py  langgraph.py  langgraph_email_send.py  langgraph_hospital_agentic.py  langgraph_pdf_agentic_rag.py  langgraph_student_management.py
campus-ai-backend/config/: database.py
campus-ai-backend/controller/: user_controller.py
campus-ai-backend/routes/: auth_route.py
campus-ai-backend/util/: auth_utils.py
campus-ai-frontend/: package-lock.json  package.json
campus-ai-frontend/src/: App.js  App.scss  index.js
campus-ai-frontend/src/components/Footer/: index.js
campus-ai-frontend/src/components/Header/: index.js
campus-ai-frontend/src/components/Main/: index.js
campus-ai-frontend/src/components/loader/: Loader.js
campus-ai-frontend/src/context/: AuthContext.js
campus-ai-frontend/src/global/: globals.js
campus-ai-frontend/src/pages/: Routes.js
campus-ai-frontend/src/pages/Frontend/: index.js
campus-ai-frontend/src/pages/Frontend/Home/: index.js
campus-ai-frontend/src/pages/Frontend/Todo/: index.js
campus-ai-frontend/src/pages/Frontend/chatbot/: ChatBot.js  Dashboard.js  StudentChatBot.js  User.js
campus-ai-frontend/src/pages/auth/: ForgetPassword.js  Login.js  Register.js  index.js
